[gd_scene load_steps=6 format=3 uid="uid://cmec1o60ewxia"]

[ext_resource type="Script" path="res://actors/ui/overlay.gd" id="1_ci4yj"]
[ext_resource type="Theme" uid="uid://dkqub5bgiymo4" path="res://main_ui_theme.tres" id="2_6ejsd"]
[ext_resource type="FontFile" uid="uid://buxj1nkh6rgq1" path="res://fonts/Roboto-Medium.ttf" id="3_lo3q4"]

[sub_resource type="LabelSettings" id="LabelSettings_32u30"]
font = ExtResource("3_lo3q4")
font_size = 120
outline_size = 24
outline_color = Color(0, 0.509804, 1, 1)
shadow_size = 0
shadow_color = Color(1, 1, 1, 0.235294)

[sub_resource type="LabelSettings" id="LabelSettings_00n62"]
font = ExtResource("3_lo3q4")
font_size = 42

[node name="Overlay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -416.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ci4yj")

[node name="introduction" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -320.0
offset_right = 400.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6ejsd")

[node name="RichTextLabelAndroid" type="RichTextLabel" parent="introduction"]
visible = false
layout_mode = 2
offset_left = 12.0
offset_right = 788.0
offset_bottom = 560.0
theme_override_fonts/bold_font = ExtResource("3_lo3q4")
bbcode_enabled = true
text = "[font_size=42][b]Welche to GoArk[/b][/font_size]

[font_size=38][b]Controls[/b][/font_size]:
[b]Move Paddle[/b]:  Use your finger.
[b]Launch Balls[/b]: Tap the screen while your finger is on the paddle.

[b][font_size=38]Gameplay[/font_size][/b]:
For each life, you get up to 5 balls to play. Control the launch of each ball strategically to maximize your score and break through the toughest levels.

Are you ready to take on the challenge? [b]Let's play![/b]

"
fit_content = true

[node name="RichTextLabel" type="RichTextLabel" parent="introduction"]
layout_mode = 2
offset_left = 12.0
offset_right = 788.0
offset_bottom = 522.0
theme_override_fonts/bold_font = ExtResource("3_lo3q4")
bbcode_enabled = true
text = "[font_size=42][b]Welche to GoArk[/b][/font_size]

[font_size=38][b]Controls[/b][/font_size]:
[b]Move Paddle[/b]:  Use your mouse or [b]A[/b] and [b]D[/b] keys.
[b]Launch Balls[/b]: Press [b]SPACE[/b] to start each ball.

[b][font_size=38]Gameplay[/font_size][/b]:
For each life, you get up to 5 balls to play. Control the launch of each ball strategically to maximize your score and break through the toughest levels.

Are you ready to take on the challenge? [b]Let's play![/b]

"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="introduction"]
layout_mode = 2
offset_left = 12.0
offset_top = 564.0
offset_right = 788.0
offset_bottom = 606.0

[node name="Button" type="Button" parent="introduction/CenterContainer"]
layout_mode = 2
text = "START"

[node name="gameover" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.5
offset_top = -153.0
offset_right = 360.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="gameover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="gameover/CenterContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Status" type="Label" parent="gameover/CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 10.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_32u30")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="gameover/CenterContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="gameover/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_6ejsd")
text = "RESTART"

[node name="won" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.5
offset_top = -239.5
offset_right = 360.5
offset_bottom = 239.5
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="won"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_right = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="won/CenterContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Status" type="Label" parent="won/CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 10.0
text = "WON"
label_settings = SubResource("LabelSettings_32u30")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="won/CenterContainer"]
layout_mode = 2
columns = 2

[node name="ScoreTitle" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
text = "SCORE: "

[node name="Score" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0000"
horizontal_alignment = 2

[node name="TimeTitle" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time: "

[node name="Time" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
text = "1min 2sec"
horizontal_alignment = 2

[node name="TimeValueTitle" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Value: "

[node name="TimeValue" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="HighscoreTitle" type="RichTextLabel" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("3_lo3q4")
bbcode_enabled = true
text = "[rainbow][wave]NEW HIGHSCORE:[/wave][/rainbow]"
scroll_active = false
autowrap_mode = 0

[node name="TotalTitle" type="Label" parent="won/CenterContainer/GridContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lo3q4")
text = "Total: "

[node name="Total" type="Label" parent="won/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lo3q4")
text = "000"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="won/CenterContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="won/CenterContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="won/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_6ejsd")
text = "RESTART"

[node name="pause" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.5
offset_top = -153.0
offset_right = 360.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="pause/CenterContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Status" type="Label" parent="pause/CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 10.0
text = "PAUSE"
label_settings = SubResource("LabelSettings_32u30")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="pause/CenterContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="pause/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_6ejsd")
text = "RESUME"

[node name="settings" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.0
offset_top = -172.5
offset_right = 339.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6ejsd")

[node name="VBoxContainer" type="VBoxContainer" parent="settings"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_00n62")

[node name="HSeparator2" type="HSeparator" parent="settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("2_6ejsd")

[node name="GridContainer" type="GridContainer" parent="settings/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LabelEnableSoundEffects" type="Label" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Enable Sound Effects"

[node name="CheckBoxSoundEffects" type="CheckBox" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_6ejsd")
text = "On"

[node name="LabelSoundVolume" type="Label" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sound Effect Volume"

[node name="SliderSoundVolume" type="HSlider" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_6ejsd")
max_value = 1.0
step = 0.0

[node name="LabelEnableMusic" type="Label" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Enable Music"

[node name="CheckBoxMusic" type="CheckBox" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_6ejsd")
text = "On"

[node name="LabelMusicVolume" type="Label" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SliderMusicVolume" type="HSlider" parent="settings/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_6ejsd")

[node name="HSeparator" type="HSeparator" parent="settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("2_6ejsd")

[node name="CenterContainer" type="CenterContainer" parent="settings/VBoxContainer"]
layout_mode = 2

[node name="CloseSettingsButton" type="Button" parent="settings/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "CLOSE"

[connection signal="pressed" from="introduction/CenterContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="gameover/CenterContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="won/CenterContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="pause/CenterContainer/Button" to="." method="_on_resume_pressed"]
[connection signal="toggled" from="settings/VBoxContainer/GridContainer/CheckBoxSoundEffects" to="." method="_on_check_box_sound_effects_toggled"]
[connection signal="value_changed" from="settings/VBoxContainer/GridContainer/SliderSoundVolume" to="." method="_on_slider_sound_volume_value_changed"]
[connection signal="toggled" from="settings/VBoxContainer/GridContainer/CheckBoxMusic" to="." method="_on_check_box_music_toggled"]
[connection signal="value_changed" from="settings/VBoxContainer/GridContainer/SliderMusicVolume" to="." method="_on_slider_music_volume_value_changed"]
[connection signal="pressed" from="settings/VBoxContainer/CenterContainer/CloseSettingsButton" to="." method="_on_close_settings_button_pressed"]
